--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <div class="notification">
-      <button class="close"><img src="icon-close.png" alt="" /></button>
+      <button class="close"><img src="imgeez/icon-close.png" alt="" /></button>
       This is a notification!
     </div>
   </body>
